# django-rest-scalable-apis-example

./: .gitignore  README.md  pyproject.toml
api/: urls.py
api/base/: fields.py  permissions.py
api/v1/: urls.py  views.py
api/v2/: urls.py  views.py
api/v3/: urls.py  views.py
server/: settings.py  urls.py
users/: models.py  services.py
users/migrations/: 0001_initial.py
